--- a/project/project.csproj
+++ b/project/project.csproj
@@ -110,5 +110,11 @@
   <ItemGroup>
     <None Include="Resources\63318__flag2__page-turn-please-turn-over-pto-paper_turn_over.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BackImage.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icons8-Windows-8-Food-Beer-Bottle.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
